Fix localisation, improve memory handling and refactor